frontend/src/sass/components/_app.scss
.logged-page {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: 100vh;
  width: 100vw;
  overflow: hidden;

  &__main {
    flex-grow: 1;
    display: flex;
    background: var(--color-background-app);
    overflow: auto;
  }

  &__sidebar {
    background: #fff;
    max-width: 30rem;
    min-width: 30rem;
    display: flex;
    flex-direction: column;
    @media (max-width: 1000px) {
      min-width: 20rem;
      max-width: 20rem;
    }
    @media (max-width: 768px) {
      min-width: 100px;
      max-width: 100px;
    }
  }


  &__footer {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__player {
    flex-grow: 1;
    @media (max-width: 1000px) {
      height: 80px;
    }
  }
}

